<resources>
    <string name="app_name">ReCarbon</string>
    <string name="logo_text_recarbon">ReCarbon</string>

    <!--Sign Up & Sign In-->
    <string name="sign_in">Sign In</string>
    <string name="username_email">Username/ Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="email">Email</string>

    <!--Navigation Menu-->
    <string name="home">Home</string>
    <string name="kalkulator">Kalkulator</string>
    <string name="artikel">Artikel</string>
    <string name="settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="hello_username">Hello, Akhdan Pangestuaji</string>
    <string name="pengaturan_akun">Pengaturan Akun</string>
    <string name="faqs">FAQs</string>
    <string name="log_out">Log Out</string>
    <string name="hari_ini">Hari Ini</string>
    <string name="kemarin">Kemaren</string>
    <string name="nama_anda">Nama Anda</string>
    <string name="kembali">Kembali</string>
    <string name="ganti_password">Ganti Password</string>
    <string name="recarbon_gmail_com">recarbon@gmail.com</string>
    <string name="email_anda">Email Anda</string>
    <string name="akhdan_pangestuaji">Akhdan Pangestuaji</string>
    <string name="image_profile">image profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="simpan">Simpan</string>
</resources>